fix overflow

--- a/css/output.css
+++ b/css/output.css
@@ -1104,6 +1104,11 @@ video {
   -moz-osx-font-smoothing: grayscale;
 }
 
+div,
+section {
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -1353,10 +1358,6 @@ body {
 
 .hover\:opacity-80:hover {
   opacity: 0.8;
-}
-
-.hover\:opacity-60:hover {
-  opacity: 0.6;
 }
 
 @media (min-width: 768px) {
